# nuclear-downloader

./: CHANGELOG.md  LICENSE  README.md
docs/: quickstart.md
nuclear-app/: .gitignore  package-lock.json  package.json  vite.config.js
nuclear-app/src/: app.html
nuclear-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
nuclear-app/src-tauri/binaries/: README.md
nuclear-app/src-tauri/icons/: icon.icns
nuclear-app/src-tauri/src/: downloader.rs  lib.rs  main.rs  models.rs  updater.rs
nuclear-app/src/routes/: +page.svelte
