[package]
name = "nuclear"
version = "0.5.0"
description = "Nuclear Downloader is an easy-to-use Windows desktop downloader for YouTube, X, and other yt-dlp-supported sites."
authors = ["HoodedBandit"]
edition = "2021"
license-file = "../../LICENSE"

[lib]
name = "nuclear_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt", "fs"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "5"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
semver = "1"
futures-util = "0.3"
